--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -78,6 +78,18 @@ $black: #2b2523
   width: 1.5rem
   height: 1.5rem
   fill: currentColor
+.navbar-brand
+  background-color: #586d4a
+.nav-logo 
+  text-align: center
+  color: white
+.navbar-brand .navbar-item
+  display: flex
+  justify-content: center
+  font-size: 24px
+  color: #586d4a
+.navbar-burger span
+  color: white
 .navbar-brand .navbar-item.logo
   padding: 0 1rem
 footer.footer
