Update all styles

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -4,9 +4,12 @@
 // Kaldi logo brand color: #FD461E
 $kaldi-red: #D64000
 $kaldi-red-invert: #fff
+$dark-green: #323e29
+$light-green: #586d4a
+$light-green-hover: #617952
 
-$primary: $kaldi-red
-$primary-invert: $kaldi-red-invert
+$primary: $light-green
+$primary-invert: $light-green-hover
 $body-color: #333
 $black: #2b2523
 
@@ -61,12 +64,17 @@ $black: #2b2523
     border-radius: .25rem
     text-decoration: none
     font-weight: 700
-    color: #CC3700
+    color: $dark-green
     text-align: center
-    -webkit-box-shadow: inset 0 0 0 2px #CC3700
-    box-shadow: inset 0 0 0 2px #f40
+    -webkit-box-shadow: inset 0 0 0 2px $dark-green
+    box-shadow: inset 0 0 0 2px $dark-green
     -webkit-transition: all .15s ease
     transition: all .15s ease
+
+    &:hover
+      color: $light-green
+      -webkit-box-shadow: inset 0 0 0 2px $light-green
+      box-shadow: inset 0 0 0 2px $light-green
 
 .margin-top-0
   margin-top: 0 !important
@@ -78,8 +86,6 @@ $black: #2b2523
   width: 1.5rem
   height: 1.5rem
   fill: currentColor
-.navbar-brand
-  background-color: #586d4a
 .nav-logo 
   text-align: center
   color: white
@@ -87,7 +93,6 @@ $black: #2b2523
   display: flex
   justify-content: center
   font-size: 24px
-  color: #586d4a
 .navbar-burger span
   color: white
 .navbar-brand .navbar-item.logo
@@ -104,7 +109,6 @@ $menu-item-active-color: $kaldi-red-invert
 $menu-item-active-background-color:	$kaldi-red-invert
 $menu-list-border-left: 1px solid $kaldi-red-invert
 $menu-label-color: $white-ter
-
 
 .menu-label
   font-size: 1em !important
@@ -123,5 +127,86 @@ $menu-label-color: $white-ter
     height: 1em
     vertical-align: middle
     display: inline
+
+.skill-container
+    display: flex
+    flex-direction: column
+    align-items: center
+    margin: 10px 0
+    height: 100%
+    justify-content: flex-start
+
+.skill-image
+    display: flex
+    justify-content: center
+    align-items: center
+    width: 100%
+    height: 100%
+
+.skill-text
+  display: flex
+  justify-content: center
+  align-items: center
+  font-size: 20px
+
+.profile-image
+  background-position: 25% 100%
+  height: 500px
+  width: 100%
+
+  @media screen and (min-width: 450px)
+    background-attachment: fixed
+    background-position: 27% 100%
+    height: 700px
+    width: 100vw
+
+  @media screen and (min-width: 769px)
+    background-position: 25% 100%
+    justify-content: flex-end
+
+  @media screen and (min-width: 1088px)
+    background-position: 50% 100%
+    height: 850px
+
+
+.profile-text-container
+  visibility: hidden
+
+  @media screen and (min-width: 769px)
+    visibility: hidden
+
+  @media screen and (min-width: 1088px)
+    visibility: visible
+    margin-right: 10%
+
+.navbar 
+  background-color: $light-green !important
+
+.navbar-item.navbar-option
+  @media screen and (min-width: 1088px)
+    color: white !important
+
+  &:hover
+    @media screen and (min-width: 1088px)
+      color: lightgray !important
+
+.button.is-link
+  background-color: $light-green !important
+  &:hover
+    background-color: $light-green-hover !important
+
+.margin-bottom-0 
+  margin-bottom: 0 !important
+
+.custom-section-header
+  height: 150px !important
+  
+.custom-section-h1
+  color: #323e29 !important
+  border-bottom: 1px solid #323e29 !important
+  border-top: 1px solid #323e29 !important
+  padding: 1rem !important
+  width: 90% !important
+  text-align: center !important
 
 @import "~bulma"
