Fix background image bug

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -89,8 +89,22 @@ $black: #2b2523
 .nav-logo 
   text-align: center
   color: white
+
   @media screen and (max-width: 768) 
     font-size: 24px
+  
+  &.desktop
+    display: none !important
+
+    @media screen and (min-width: 1088px)
+      display: block !important
+
+  &.mobile 
+    display: block !important
+
+    @media screen and (min-width: 1088px)
+      display: none !important
+    
   
 .navbar-brand .navbar-item
   display: flex
