--- a/admin/cms.css
+++ b/admin/cms.css
@@ -145,10 +145,10 @@ footer.footer {
 .profile-image {
   background-position: 25% 100%;
   height: 100vh;
-  width: 100%; }
+  width: 100%;
+  background-attachment: fixed; }
   @media screen and (min-width: 450px) {
     .profile-image {
-      background-attachment: fixed;
       background-position: 27% 100%;
       width: 100vw; } }
   @media screen and (min-width: 769px) {
