--- a/admin/cms.css
+++ b/admin/cms.css
@@ -145,8 +145,7 @@ footer.footer {
 .profile-image {
   background-position: 25% 100%;
   height: 100vh;
-  width: 100%;
-  background-attachment: fixed; }
+  width: 100%; }
   @media screen and (min-width: 450px) {
     .profile-image {
       background-position: 27% 100%;
@@ -157,6 +156,7 @@ footer.footer {
       justify-content: flex-end; } }
   @media screen and (min-width: 1088px) {
     .profile-image {
+      background-attachment: fixed;
       background-position: 50% 100%; } }
   @media screen and (min-width: 1350px) {
     .profile-image {
